20250127 master 회원가입 로그인 됨

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -18,7 +18,7 @@
 
   <script src="https://unpkg.com/scrollreveal"></script>
   <script src="https://unpkg.com/typeit@8.8.5/dist/index.umd.js"></script>
-  <title>welcom to hokkaido</title>
+  <title>welcome to hokkaido</title>
 </head>
 <body>
 <header class="header">
@@ -27,7 +27,7 @@
     <div class="nav__logo">
       <img
               class="nav__img"
-              src="/static/images/hokkaidologo.png"
+              src="/images/hokkaidologo.png"
               alt="홋카이도 로고"
       />
       <a href="#" class="nav__brand">ようこそ、北海道へ！</a>
@@ -99,7 +99,7 @@
 
     <img
             class="home__img"
-            src="/static/images/home/hokkaidomap.png"
+            src="/images/home/hokkaidomap.png"
             alt="홋카이도 지도"
     />
   </section>
@@ -109,7 +109,7 @@
     <div class="about__container container">
       <img
               class="about__img"
-              src="/static/images/about/travel.jpg"
+              src="/images/about/travel.jpg"
               alt="요것도 지도"
       />
 
@@ -147,7 +147,7 @@
       >
         <img
                 class="restaurants__img"
-                src="/static/images/restaurant/restaurant2.jpg"
+                src="/images/restaurant/restaurant2.jpg"
                 alt="식당 사진"
         />
       </a>
@@ -162,7 +162,7 @@
               target="_blank"
               class="cafe__link"
       >
-        <img class="cafe__img" src="/static/images/cafe/cafe2.jpg" alt="" />
+        <img class="cafe__img" src="/images/cafe/cafe2.jpg" alt="" />
       </a>
       <div class="cafe__data">
         <h3 class="cafe__subtitle">커피, 케이크, 브런치</h3>
@@ -185,7 +185,7 @@
       >
         <img
                 class="camp__img"
-                src="/static/images/camp/camp.jpg"
+                src="/images/camp/camp.jpg"
                 alt="캠핑장 사진"
         />
       </a>
@@ -212,7 +212,7 @@
       >
         <img
                 class="trip__img"
-                src="/static/images/trip/trip.jpg"
+                src="/images/trip/trip.jpg"
                 alt="여행지 사진"
         />
       </a>
